# ihft

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  PreLoad.cmake  README.md
channel/benchmark/: CMakeLists.txt  benchmark_one2many_stream_object_queue_heap.cpp  benchmark_one2many_stream_object_queue_heap_stream_allocator.cpp  benchmark_one2many_stream_object_queue_latency.cpp  benchmark_one2many_stream_object_queue_plain.cpp  benchmark_one2many_stream_pod_queue_latency.cpp  benchmark_one2many_stream_pod_queue_plain.cpp  benchmark_one2one_stream_object_queue_heap.cpp  benchmark_one2one_stream_object_queue_heap_stream_allocator.cpp  benchmark_one2one_stream_object_queue_latency.cpp  benchmark_one2one_stream_object_queue_plain.cpp  benchmark_one2one_stream_pod_queue_latency.cpp  benchmark_one2one_stream_pod_queue_plain.cpp  heap_data.h  latency_data.h  main.h  plain_data.h
channel/measure/: CMakeLists.txt  data_heap.h  latency_data.h  main.h  measure_one2each_stream_object_queue_heap.cpp  measure_one2each_stream_object_queue_heap_stream_allocator.cpp  measure_one2each_stream_object_queue_latency.cpp  measure_one2each_stream_object_queue_plain.cpp  measure_one2each_stream_pod_queue_latency.cpp  measure_one2each_stream_pod_queue_plain.cpp  measure_one2many_stream_object_queue_heap.cpp  measure_one2many_stream_object_queue_heap_stream_allocator.cpp  measure_one2many_stream_object_queue_latency.cpp  measure_one2many_stream_object_queue_plain.cpp  measure_one2many_stream_pod_queue_latency.cpp  measure_one2many_stream_pod_queue_plain.cpp  measure_one2one_stream_object_queue_heap.cpp  measure_one2one_stream_object_queue_heap_stream_allocator.cpp  measure_one2one_stream_object_queue_latency.cpp  measure_one2one_stream_object_queue_plain.cpp  measure_one2one_stream_pod_queue_latency.cpp  measure_one2one_stream_pod_queue_plain.cpp
channel/one2many_queue/: CMakeLists.txt  common.h  main.h  one2many_bitmask_queue.h  one2many_counter_queue.h  test_bitmask_queue_heap_data.cpp  test_bitmask_queue_latency.cpp  test_bitmask_queue_plain_data.cpp  test_counter_queue_heap_data.cpp  test_counter_queue_latency.cpp  test_counter_queue_plain_data.cpp  test_heap_data.h  test_latency.h  test_plain_data.h
channel/test/: CMakeLists.txt  heap_data.h  main.h  test_bitmask_queue_heap_data.cpp  test_bitmask_queue_latency.cpp  test_bitmask_queue_plain_data.cpp  test_counter_object_queue_heap_data.cpp  test_counter_object_queue_latency.cpp  test_counter_object_queue_plain_data.cpp  test_counter_pod_queue_latency.cpp  test_counter_pod_queue_plain_data.cpp  test_counter_queue_heap_data.cpp  test_counter_queue_latency.cpp  test_counter_queue_plain_data.cpp  test_heap_data.h  test_latency.h  test_one2many_stream_object_queue_heap_data.cpp  test_one2many_stream_object_queue_latency.cpp  test_one2many_stream_object_queue_plain.cpp  test_one2many_stream_object_queue_plain_data.cpp  test_one2many_stream_pod_queue_latency.cpp  test_one2many_stream_pod_queue_plain_data.cpp  test_one2many_stream_queue.cpp  test_one2one_stream_object_queue_heap.cpp  test_one2one_stream_object_queue_heap_stream_allocator.cpp  test_one2one_stream_object_queue_latency.cpp  test_one2one_stream_object_queue_plain.cpp  test_one2one_stream_pod_queue_latency.cpp  test_one2one_stream_pod_queue_plain_data.cpp  test_one2one_stream_queue.cpp  test_plain_data.h  test_stream_queue.cpp
engine/example/: CMakeLists.txt  bogatyr.cpp  china_cities.cpp  engine_demo.cpp  engine_manual_config.cpp  engine_perimeter.cpp  greek_alphabet.cpp  logical_cpu_demo.cpp
logger/: CMakeLists.txt  README.md
logger/benchmark/: CMakeLists.txt  benchmark_logger_async.cpp  benchmark_logger_client_construct.cpp  benchmark_logger_construct.cpp  benchmark_logger_multiple_threads.cpp  benchmark_logger_synch.cpp
logger/example/: CMakeLists.txt  logger_many_threads.cpp  logger_mthreads.cpp  logger_multiple_threads.cpp  logger_simple.cpp
logger/include/logger/: logger.h  logger_adapter.h  logger_client.h  logger_contract.h  logger_event.h  logger_extra_data.h  logger_level.h  logger_listener.h
logger/src/: default_logger_listener.cpp  logger.cpp  logger_adapter.cpp  logger_client.cpp  logger_level.cpp  logger_listener.cpp
logger/test/: CMakeLists.txt  test_compile_time.cpp  test_compiletime.cpp  test_logger.cpp  test_logger_client.cpp  test_logger_event.cpp  test_logger_queue.cpp  test_logger_simple.cpp  test_serialize.cpp  test_source_info.cpp  test_source_location.cpp  test_tuple_format.cpp  test_tuple_format_accurately.cpp  test_tuple_format_every.cpp  test_tuple_print.cpp  test_typer.cpp
memory/test/: CMakeLists.txt  benchmark_stream_fixed_pool_allocator.cpp  test_arena_allocator.cpp  test_huge_page_allocator.cpp  test_mmap_page_allocator.cpp  test_stream_fixed_pool_allocator.cpp
misc/: CMakeLists.txt  README.md
misc/example/: CMakeLists.txt  config_helper_demo.cpp  sigaction_demo.cpp  toml_demo.cpp  toml_doc.h
misc/include/misc/: config_helper.h  (+1 more)
misc/src/: config_helper.cpp
misc/test/: CMakeLists.txt  test_config_helper.cpp  test_signal_helper.cpp  test_sso.cpp
network/example/: CMakeLists.txt  multicast_hello_sender.c  multicast_hello_sender.cpp  multicast_helper.h  multicast_listener.c  multicast_rtt_listener.c  multicast_rtt_listener.cpp  multicast_rtt_sender.c  multicast_rtt_sender.cpp  multicast_sender.c  multicast_trace_listener.c  multicast_trace_listener.cpp  udp_echo_server.c  udp_echo_server.cpp  udp_helper.h  udp_rtt_client.c  udp_rtt_client.cpp
platform/example/: CMakeLists.txt  china_cities.cpp  core_2_core_latancy.cpp  get_isolated_cpu.cpp  get_platform_info.cpp  get_smt_status.cpp  set_thread_cpu.cpp  set_thread_name.cpp  sysjitter.cpp
platform/test/: CMakeLists.txt  get_isolated_cpu.cpp  set_thread_cpu.cpp  set_thread_name.cpp  test_cmdline.cpp  test_cpu_isolation.cpp  test_platform.cpp
types/benchmark/: CMakeLists.txt  benchmark_charcmp_vs_strcmp.cpp  benchmark_function_ref.cpp  benchmark_memory_access.cpp
types/test/: CMakeLists.txt  test_box.cpp  test_function_ref.cpp  test_result.cpp  test_scope_exit.cpp  test_sso.cpp
(+138 files in other folders)
