# benchmarks

# main library

add_library(ihft_queue_benchmark_main INTERFACE)
target_include_directories(ihft_queue_benchmark_main INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(ihft_queue_benchmark_main INTERFACE ihft_channel)
target_link_libraries(ihft_queue_benchmark_main INTERFACE ihft_platform)

# one2many_stream

add_executable(benchmark_one2many_stream_object_queue_perf_plain
    plain_data.h
    benchmark_one2many_stream_object_queue_plain.cpp
)
target_link_libraries(benchmark_one2many_stream_object_queue_perf_plain ihft_queue_benchmark_main)

add_executable(benchmark_one2many_stream_object_queue_perf_heap
    heap_data.h
    benchmark_one2many_stream_object_queue_heap.cpp
)
target_link_libraries(benchmark_one2many_stream_object_queue_perf_heap ihft_queue_benchmark_main)

add_executable(benchmark_one2many_stream_object_queue_latency
    latency_data.h
    benchmark_one2many_stream_object_queue_latency.cpp
)
target_link_libraries(benchmark_one2many_stream_object_queue_latency ihft_queue_benchmark_main)

add_executable(benchmark_one2many_stream_pod_queue_perf_plain
    plain_data.h
    benchmark_one2many_stream_pod_queue_plain.cpp
)
target_link_libraries(benchmark_one2many_stream_pod_queue_perf_plain ihft_queue_benchmark_main)

add_executable(benchmark_one2many_stream_pod_queue_latency
    latency_data.h
    benchmark_one2many_stream_pod_queue_latency.cpp
)
target_link_libraries(benchmark_one2many_stream_pod_queue_latency ihft_queue_benchmark_main)

# one2one_stream

add_executable(benchmark_one2one_stream_object_queue_perf_plain
    plain_data.h
    benchmark_one2one_stream_object_queue_plain.cpp
)
target_link_libraries(benchmark_one2one_stream_object_queue_perf_plain ihft_queue_benchmark_main)

add_executable(benchmark_one2one_stream_object_queue_perf_heap
    plain_data.h
    benchmark_one2one_stream_object_queue_heap.cpp
)
target_link_libraries(benchmark_one2one_stream_object_queue_perf_heap ihft_queue_benchmark_main)

add_executable(benchmark_one2one_stream_object_queue_perf_heap_stream_allocator
    plain_data.h
    benchmark_one2one_stream_object_queue_heap_stream_allocator.cpp
)
target_link_libraries(benchmark_one2one_stream_object_queue_perf_heap_stream_allocator ihft_queue_benchmark_main)

add_executable(benchmark_one2one_stream_object_queue_latency
    latency_data.h
    benchmark_one2one_stream_object_queue_latency.cpp
)
target_link_libraries(benchmark_one2one_stream_object_queue_latency ihft_queue_benchmark_main)

add_executable(benchmark_one2one_stream_pod_queue_perf_plain
    latency_data.h
    benchmark_one2one_stream_pod_queue_plain.cpp
)
target_link_libraries(benchmark_one2one_stream_pod_queue_perf_plain ihft_queue_benchmark_main)

add_executable(benchmark_one2one_stream_pod_queue_latency
    latency_data.h
    benchmark_one2one_stream_pod_queue_latency.cpp
)
target_link_libraries(benchmark_one2one_stream_pod_queue_latency ihft_queue_benchmark_main)
