ihft_add_benchmark(benchmark_logger_client_async)
target_link_libraries(benchmark_logger_client_async PRIVATE ihft_logger)

ihft_add_benchmark(benchmark_logger_client_synch)
target_link_libraries(benchmark_logger_client_synch PRIVATE ihft_logger)

ihft_add_benchmark(benchmark_logger_client_construct)
target_link_libraries(benchmark_logger_client_construct PRIVATE ihft_logger)
target_link_libraries(benchmark_logger_client_construct PRIVATE ihft_platform)
