ihft_add_benchmark(benchmark_logger_async)
target_link_libraries(benchmark_logger_async PRIVATE ihft_logger)

ihft_add_benchmark(benchmark_logger_synch)
target_link_libraries(benchmark_logger_synch PRIVATE ihft_logger)

add_executable(benchmark_logger_mthreads benchmark_logger_mthreads.cpp)
target_link_libraries(benchmark_logger_mthreads PRIVATE ihft_timer)
target_link_libraries(benchmark_logger_mthreads PRIVATE ihft_logger)
target_link_libraries(benchmark_logger_mthreads PRIVATE ihft_platform)

ihft_add_benchmark(benchmark_logger_construct)
target_link_libraries(benchmark_logger_construct PRIVATE ihft_logger)
target_link_libraries(benchmark_logger_construct PRIVATE ihft_platform)
