ihft_add_test(test_compile_time)

ihft_add_test(test_typer)

ihft_add_test(test_tuple_print)

ihft_add_test(test_tuple_format_accurately)

ihft_add_test(test_tuple_format_every)

ihft_add_test(test_logger)
target_link_libraries(test_logger PRIVATE ihft_logger)

ihft_add_test(test_source_location)
target_link_libraries(test_source_location PRIVATE ihft_logger)

ihft_add_test(test_logger_event)
target_link_libraries(test_logger_event PRIVATE ihft_logger)

ihft_add_test(test_logger_client)
target_link_libraries(test_logger_client PRIVATE ihft_logger)

ihft_add_test(test_logger_queue)
target_link_libraries(test_logger_queue PRIVATE ihft_types)
target_link_libraries(test_logger_queue PRIVATE ihft_channel)
target_link_libraries(test_logger_queue PRIVATE ihft_memory)
target_link_libraries(test_logger_queue PRIVATE ihft_logger)
