ihft_add_test(test_stream_fixed_pool_allocator)
target_link_libraries(test_stream_fixed_pool_allocator PRIVATE ihft_memory)

ihft_add_test(test_huge_page_allocator)
target_link_libraries(test_huge_page_allocator PRIVATE ihft_memory)
target_link_libraries(test_huge_page_allocator PRIVATE ihft_platform)
