# manual example apps
add_executable(platform_set_thread_name set_thread_name.cpp)
target_link_libraries(platform_set_thread_name ihft_platform)

add_executable(platform_set_thread_cpu set_thread_cpu.cpp)
target_link_libraries(platform_set_thread_cpu ihft_platform)

add_executable(platform_get_isolated_cpu get_isolated_cpu.cpp)
target_link_libraries(platform_get_isolated_cpu ihft_platform)

add_executable(platform_core_2_core_latancy core_2_core_latancy.cpp)
target_link_libraries(platform_core_2_core_latancy ihft_platform)
target_link_libraries(platform_core_2_core_latancy ihft_constant)
