# manual example apps
add_executable(platform_set_thread_name set_thread_name.cpp)
target_link_libraries(platform_set_thread_name ihft_platform)

add_executable(platform_set_thread_cpu set_thread_cpu.cpp)
target_link_libraries(platform_set_thread_cpu ihft_platform)

add_executable(platform_get_info get_platform_info.cpp)
target_link_libraries(platform_get_info ihft_platform)

add_executable(platform_core_2_core_latancy core_2_core_latancy.cpp)
target_link_libraries(platform_core_2_core_latancy ihft_platform)
target_link_libraries(platform_core_2_core_latancy ihft_constant)

add_executable(platform_sysjitter sysjitter.cpp)
target_link_libraries(platform_sysjitter ihft_platform)
target_link_libraries(platform_sysjitter ihft_compiler)
target_link_libraries(platform_sysjitter ihft_constant)

add_executable(platform_greek_alphabet greek_alphabet.cpp)
target_link_libraries(platform_greek_alphabet ihft_platform)

add_executable(platform_china_cities china_cities.cpp)
target_link_libraries(platform_china_cities ihft_platform)

add_executable(platform_bogatyr bogatyr.cpp)
target_link_libraries(platform_bogatyr ihft_platform)
