ihft_add_benchmark(benchmark_function_ref)
target_link_libraries(benchmark_function_ref PRIVATE ihft_types)

ihft_add_benchmark(benchmark_memory_access)
target_link_libraries(benchmark_memory_access PRIVATE ihft_compiler)

ihft_add_benchmark(benchmark_charcmp_vs_strcmp)
target_link_libraries(benchmark_charcmp_vs_strcmp PRIVATE ihft_compiler)
